--- a/Tic Tac Toe/MainWindow.xaml
+++ b/Tic Tac Toe/MainWindow.xaml
@@ -6,19 +6,28 @@
         xmlns:local="clr-namespace:Tic_Tac_Toe"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Button Content="" HorizontalAlignment="Left" Margin="221,58,0,0" VerticalAlignment="Top" Width="100" Height="98" BorderThickness="0,0,1,1" ClipToBounds="True" Visibility="Visible" BorderBrush="Black" Background="White" FontSize="72" Click="clickBox"/>
-        <Button HorizontalAlignment="Left" Margin="321,58,0,0" VerticalAlignment="Top" Width="100" Height="98" BorderThickness="1,0,1,1" Visibility="Visible" BorderBrush="Black" Background="White" FontSize="72" Click="clickBox" Grid.Column="1"/>
-        <Button Content="" HorizontalAlignment="Left" Margin="421,58,0,0" VerticalAlignment="Top" Width="100" Height="98" BorderThickness="1,0,0,1" Visibility="Visible" BorderBrush="Black" Background="White" FontSize="72" Click="clickBox" Grid.Column="2"/>
-        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="98" Margin="221,156,0,0" BorderThickness="0,1,1,1" SnapsToDevicePixels="True" Visibility="Visible" BorderBrush="Black" Background="White" FontSize="72" Click="clickBox" Grid.Row="1"/>
-        <Button Content="" HorizontalAlignment="Left" Margin="321,156,0,0" VerticalAlignment="Top" Width="100" Height="98" Visibility="Visible" BorderBrush="Black" Background="White" FontSize="72" Click="clickBox
-                " Grid.Row="1" Grid.Column="1"/>
-        <Button Content="" HorizontalAlignment="Left" Margin="421,156,0,0" VerticalAlignment="Top" Width="100" Height="98" BorderThickness="1,1,0,1" Visibility="Visible" BorderBrush="Black" Background="White" IsCancel="True" FontSize="72" Click="clickBox" Grid.Row="1" Grid.Column="2"/>
-        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="98" Margin="221,254,0,0" BorderThickness="0,1,1,0" Visibility="Visible" BorderBrush="Black" Background="White" FontSize="72" Click="clickBox" Grid.Row="2"/>
-        <Button Content="" HorizontalAlignment="Left" Margin="321,254,0,0" VerticalAlignment="Top" Width="100" Height="98" BorderThickness="1,1,1,0" Visibility="Visible" BorderBrush="Black" Background="White" FontSize="72" Click="clickBox
-                " Grid.Row="2" Grid.Column="1"/>
-        <Button Content="" HorizontalAlignment="Left" Margin="421,254,0,0" VerticalAlignment="Top" Width="100" Height="98" BorderThickness="1,1,0,0" Visibility="Visible" BorderBrush="Black" Background="White" FontSize="72" Click="clickBox
-                " Grid.Row="2" Grid.Column="2"/>
-        <Label x:Name="playerLabel" Content="Player 1's Turn" HorizontalAlignment="Left" Margin="298,16,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold"/>
+    <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="100"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="100"/>
+        </Grid.RowDefinitions>
+        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="0" Grid.Column="0" Width="100" Height="100" BorderBrush="Black" Background="White" Click="clickBox" BorderThickness="0,0,1,1" FontSize="72" FontWeight="Normal"/>
+        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="0" Grid.Column="1" Width="100" Height="100" BorderBrush="Black" Background="White" Click="clickBox" BorderThickness="1,0,1,1" FontSize="72" FontWeight="Normal"/>
+        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="0" Grid.Column="2" Width="100" Height="100" BorderBrush="Black" Background="White" Click="clickBox" BorderThickness="1,0,0,1" FontSize="72" FontWeight="Normal"/>
+        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="1" Grid.Column="0" Width="100" Height="100" BorderBrush="Black" Background="White" Click="clickBox" BorderThickness="0,1,1,1" FontSize="72" FontWeight="Normal"/>
+        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="1" Grid.Column="1" Width="100" Height="100" BorderBrush="Black" Background="White" Click="clickBox" FontSize="72" FontWeight="Normal"/>
+        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="1" Grid.Column="2" Width="100" Height="100" BorderBrush="Black" Background="White" Click="clickBox" BorderThickness="1,1,0,1" FontSize="72" FontWeight="Normal"/>
+        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="2" Grid.Column="0" Width="100" Height="100" BorderBrush="Black" Background="White" Click="clickBox" BorderThickness="0,1,1,0" FontSize="72" FontWeight="Normal"/>
+        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="2" Grid.Column="1" Width="100" Height="100" BorderBrush="Black" Background="White" Click="clickBox" BorderThickness="1,1,1,0" FontSize="72" FontWeight="Normal"/>
+        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="2" Grid.Column="2" Width="100" Height="100" BorderBrush="Black" Background="White" Click="clickBox" BorderThickness="1,1,0,0" FontSize="72" FontWeight="Normal"/>
+        <Label x:Name="playerLabel" Content="Player 1's Turn" HorizontalAlignment="Left" Margin="61,-54,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Grid.ColumnSpan="3" Width="189"/>
+
+
     </Grid>
 </Window>
